Use short syntax for empty collections