@@ -21,7 +21,7 @@ import org.springframework.context.annotation.Configuration;
 import java.time.Duration;
 import java.time.Instant;
 import java.time.OffsetDateTime;
-import java.util.Collections;
+import java.util.Map;
 
 @Configuration
 public class ElideConfig {
@@ -81,7 +81,7 @@ public class ElideConfig {
 
   @Bean
   public EntityDictionary entityDictionary(AutowireCapableBeanFactory beanFactory) {
-    final EntityDictionary entityDictionary = new EntityDictionary(Collections.emptyMap(), new Injector() {
+    final EntityDictionary entityDictionary = new EntityDictionary(Map.of(), new Injector() {
       @Override
       public void inject(Object entity) {
         beanFactory.autowireBean(entity);
